# bam

./: commands.md  examine_models.ipynb  main.py  nohup.out  pyproject.toml  run.sh
bam/: actuators.py
output/: params_1.json  params_10.json  params_11.json  params_12.json  params_13.json  params_14.json  params_15.json  params_16.json  params_17.json  params_18.json  params_2.json  params_3.json  params_4.json  params_5.json  params_6.json  params_7.json  params_8.json  params_9.json
processed_data/: 2025-12-10_15h50m23.json  2025-12-10_15h51m48.json  2025-12-10_15h51m58.json  2025-12-10_15h52m07.json  2025-12-10_15h52m15.json  2025-12-10_15h52m25.json  2025-12-10_15h52m35.json  2025-12-10_15h52m44.json  2025-12-10_15h52m52.json  2025-12-10_15h53m02.json  2025-12-10_15h53m12.json  2025-12-10_15h53m21.json  2025-12-10_15h53m29.json  2025-12-10_16h05m21.json  2025-12-10_16h05m30.json  2025-12-10_16h05m39.json  2025-12-10_16h05m47.json  2025-12-10_16h05m58.json  2025-12-10_16h06m07.json  2025-12-10_16h06m16.json  2025-12-10_16h06m24.json  2025-12-10_16h06m34.json  2025-12-10_16h06m44.json  2025-12-10_16h06m53.json  2025-12-10_16h07m00.json
raw_data/: 2025-12-10_15h50m23.json  2025-12-10_15h51m48.json  2025-12-10_15h51m58.json  2025-12-10_15h52m07.json  2025-12-10_15h52m15.json  2025-12-10_15h52m25.json  2025-12-10_15h52m35.json  2025-12-10_15h52m44.json  2025-12-10_15h52m52.json  2025-12-10_15h53m02.json  2025-12-10_15h53m12.json  2025-12-10_15h53m21.json  2025-12-10_15h53m29.json  2025-12-10_16h05m21.json  2025-12-10_16h05m30.json  2025-12-10_16h05m39.json  (+9 more)
(+6 files in other folders)
