[project]
name = "bam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cmaes>=0.12.0",
    "colorama>=0.4.6",
    "dynamixel-sdk>=3.8.4",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "optuna>=4.6.0",
    "protobuf==3.20",
    "pygame>=2.6.1",
    "rustypot>=1.4.0",
    "wandb>=0.23.1",
    "zmq>=0.0.0",
]
